# NixHashSync

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml  result
.config/nixhashsync/: config.yml
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link
nixhashsync/: cli.py  config.py  main.py
overlays/: default.nix
